--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/point_cloud_transport_plugins
-	previous = 
-	base = 8dca1dc
+	previous = 8dca1dc
+	base = b8a9c9c
 	trim = 
 	trimbase = 
