--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/draco_point_cloud_transport
-	previous = 
-	base = 7b209e5
+	previous = 7b209e5
+	base = 69067b5
 	trim = 
 	trimbase = 
