--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/point_cloud_interfaces
-	previous = 
-	base = a458b0d
+	previous = a458b0d
+	base = 7aca760
 	trim = 
 	trimbase = 
