--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/zstd_point_cloud_transport
-	previous = 
-	base = cc5b679
+	previous = cc5b679
+	base = b8ca8a5
 	trim = 
 	trimbase = 
