--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/zlib_point_cloud_transport
-	previous = 
-	base = 200a960
+	previous = 200a960
+	base = 728aa19
 	trim = 
 	trimbase = 
