--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/zstd_point_cloud_transport
-	previous = 
-	base = 56f2c98
+	previous = 56f2c98
+	base = 815bcd0
 	trim = 
 	trimbase = 
