--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/zlib_point_cloud_transport
-	previous = 
-	base = 84eaddc
+	previous = 84eaddc
+	base = 6464e53
 	trim = 
 	trimbase = 
