--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/point_cloud_interfaces
-	previous = 
-	base = f32ebff
+	previous = f32ebff
+	base = 17ae902
 	trim = 
 	trimbase = 
