--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/point_cloud_transport_plugins
-	previous = 
-	base = 734b827
+	previous = 734b827
+	base = 0e92510
 	trim = 
 	trimbase = 
