--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/draco_point_cloud_transport
-	previous = 
-	base = 56e4a49
+	previous = 56e4a49
+	base = b3ca7d7
 	trim = 
 	trimbase = 
