--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3cfa1af
-	base = 5104e63
-	trim = 
-	trimbase = 
+	base = 7fb769e
+	trim = point_cloud_interfaces
+	trimbase = 5104e63
