--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3cfa1af
-	base = bf641eb
-	trim = 
-	trimbase = 
+	base = 4e21fc7
+	trim = zstd_point_cloud_transport
+	trimbase = bf641eb
