--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3cfa1af
-	base = 98ed16e
-	trim = 
-	trimbase = 
+	base = 05631fa
+	trim = draco_point_cloud_transport
+	trimbase = 98ed16e
