--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3cfa1af
-	base = 7b57a0b
-	trim = 
-	trimbase = 
+	base = 68d9e26
+	trim = zlib_point_cloud_transport
+	trimbase = 7b57a0b
