--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3cfa1af
-	base = 345140b
-	trim = 
-	trimbase = 
+	base = 3f54df0
+	trim = point_cloud_transport_plugins
+	trimbase = 345140b
