--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/zlib_point_cloud_transport
-	previous = 
-	base = e25f17d
+	previous = e25f17d
+	base = d40187d
 	trim = 
 	trimbase = 
