--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/point_cloud_transport_plugins
-	previous = 
-	base = 3f54df0
+	previous = 3f54df0
+	base = 10998ee
 	trim = 
 	trimbase = 
