--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/point_cloud_transport_plugins
-	previous = 
-	base = b23d0a2
+	previous = b23d0a2
+	base = cfdc047
 	trim = 
 	trimbase = 
