--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/zstd_point_cloud_transport
-	previous = 
-	base = 4e21fc7
+	previous = 4e21fc7
+	base = 9435b1f
 	trim = 
 	trimbase = 
