--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/zstd_point_cloud_transport
-	previous = 
-	base = ca42320
+	previous = ca42320
+	base = 8fb72e4
 	trim = 
 	trimbase = 
