--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/draco_point_cloud_transport
-	previous = 
-	base = 05631fa
+	previous = 05631fa
+	base = f6e5c97
 	trim = 
 	trimbase = 
