--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/draco_point_cloud_transport
-	previous = 
-	base = d4a06c4
+	previous = d4a06c4
+	base = 9774244
 	trim = 
 	trimbase = 
