--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/point_cloud_interfaces
-	previous = 
-	base = 7fb769e
+	previous = 7fb769e
+	base = 6623774
 	trim = 
 	trimbase = 
