--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/point_cloud_interfaces
-	previous = 
-	base = 1e8e500
+	previous = 1e8e500
+	base = 6098f11
 	trim = 
 	trimbase = 
