--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/zlib_point_cloud_transport
-	previous = 
-	base = 43e7842
+	previous = 43e7842
+	base = 020dace
 	trim = 
 	trimbase = 
