--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/point_cloud_transport_plugins
-	previous = 
-	base = 9ee5be8
+	previous = 9ee5be8
+	base = 47f4535
 	trim = 
 	trimbase = 
