--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/point_cloud_interfaces
-	previous = 
-	base = 2aa5b1c
+	previous = 2aa5b1c
+	base = 8a5db1b
 	trim = 
 	trimbase = 
