--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/zstd_point_cloud_transport
-	previous = 
-	base = 694235f
+	previous = 694235f
+	base = 352469e
 	trim = 
 	trimbase = 
