--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/draco_point_cloud_transport
-	previous = 
-	base = c177ffb
+	previous = c177ffb
+	base = d07ae00
 	trim = 
 	trimbase = 
