--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a5d6bb1
-	base = 4706e8f
-	trim = 
-	trimbase = 
+	base = 8527e42
+	trim = point_cloud_interfaces
+	trimbase = 4706e8f
