--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a5d6bb1
-	base = d8a2417
-	trim = 
-	trimbase = 
+	base = 5b90823
+	trim = zstd_point_cloud_transport
+	trimbase = d8a2417
