--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a5d6bb1
-	base = 4cbf2a3
-	trim = 
-	trimbase = 
+	base = b7336c5
+	trim = draco_point_cloud_transport
+	trimbase = 4cbf2a3
