--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a5d6bb1
-	base = c8cec2f
-	trim = 
-	trimbase = 
+	base = 75b66e3
+	trim = point_cloud_transport_plugins
+	trimbase = c8cec2f
