--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/iron/zlib_point_cloud_transport
-	previous = 
-	base = ef42296
+	previous = ef42296
+	base = 4d9ac79
 	trim = 
 	trimbase = 
