--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/iron/zlib_point_cloud_transport
-	previous = 
-	base = 381d471
+	previous = 381d471
+	base = 2ff5e24
 	trim = 
 	trimbase = 
