--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/iron/point_cloud_transport_plugins
-	previous = 
-	base = 75b66e3
+	previous = 75b66e3
+	base = 16d1edc
 	trim = 
 	trimbase = 
