--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/iron/point_cloud_transport_plugins
-	previous = 
-	base = 2edb5cc
+	previous = 2edb5cc
+	base = a16cb0d
 	trim = 
 	trimbase = 
