--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/iron/zstd_point_cloud_transport
-	previous = 
-	base = 7befe36
+	previous = 7befe36
+	base = 16923db
 	trim = 
 	trimbase = 
