--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/iron/point_cloud_interfaces
-	previous = 
-	base = 8527e42
+	previous = 8527e42
+	base = 6f50ac8
 	trim = 
 	trimbase = 
