--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/iron/point_cloud_interfaces
-	previous = 
-	base = cfb58f2
+	previous = cfb58f2
+	base = 5cd7f4a
 	trim = 
 	trimbase = 
