--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/iron/point_cloud_interfaces
-	previous = 
-	base = b10e558
+	previous = b10e558
+	base = c34fbe8
 	trim = 
 	trimbase = 
