--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/iron/zlib_point_cloud_transport
-	previous = 
-	base = 6aa7723
+	previous = 6aa7723
+	base = 7c626d1
 	trim = 
 	trimbase = 
