--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/iron/zstd_point_cloud_transport
-	previous = 
-	base = 16d684e
+	previous = 16d684e
+	base = 8390808
 	trim = 
 	trimbase = 
