--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/iron/zstd_point_cloud_transport
-	previous = 
-	base = 5b90823
+	previous = 5b90823
+	base = b809bb2
 	trim = 
 	trimbase = 
