--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/iron/zstd_point_cloud_transport
-	previous = 
-	base = 8ad6736
+	previous = 8ad6736
+	base = 6a6b937
 	trim = 
 	trimbase = 
