--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/iron/draco_point_cloud_transport
-	previous = 
-	base = 4dd993a
+	previous = 4dd993a
+	base = 7d7995e
 	trim = 
 	trimbase = 
