--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/iron/point_cloud_interfaces
-	previous = 
-	base = 2018d61
+	previous = 2018d61
+	base = c5c6eb7
 	trim = 
 	trimbase = 
