--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/iron/point_cloud_transport_plugins
-	previous = 
-	base = 554771a
+	previous = 554771a
+	base = 58ff55c
 	trim = 
 	trimbase = 
