--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/iron/zlib_point_cloud_transport
-	previous = 
-	base = c5227c4
+	previous = c5227c4
+	base = 88c8ec2
 	trim = 
 	trimbase = 
