--- a/.github/workflows/ros2-ci.yml
+++ b/.github/workflows/ros2-ci.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         include:
           - docker-image: "ubuntu:22.04"
-            ros-distro: "iron"
+            ros-distro: "rolling"
     container:
       image: ${{ matrix.docker-image }}
     steps:
