--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6a61aae
-	base = ce4f704
+	base = 848b7d3
 	trim = point_cloud_interfaces
-	trimbase = 
+	trimbase = ce4f704
