--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6a61aae
-	base = 98f0cd0
+	base = dd2edeb
 	trim = zstd_point_cloud_transport
-	trimbase = 
+	trimbase = 98f0cd0
