--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6a61aae
-	base = d0d19f3
+	base = 42ce32c
 	trim = draco_point_cloud_transport
-	trimbase = 
+	trimbase = d0d19f3
