--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6a61aae
-	base = 335f7dc
+	base = f64502f
 	trim = zlib_point_cloud_transport
-	trimbase = 
+	trimbase = 335f7dc
