--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6a61aae
-	base = f4a673e
+	base = 02be4bd
 	trim = point_cloud_transport_plugins
-	trimbase = 
+	trimbase = f4a673e
