Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.0.1-1": ["Thu Sep 21 2023", "Martin Pecka", "peckama2@fel.cvut.cz"]}
+{"2.0.2-1": ["Thu Oct 05 2023", "Martin Pecka", "peckama2@fel.cvut.cz"], "2.0.1-1": ["Thu Sep 21 2023", "Martin Pecka", "peckama2@fel.cvut.cz"]}
