--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd6c2e8
-	base = e5a969a
+	base = 6022593
 	trim = point_cloud_interfaces
-	trimbase = 
+	trimbase = e5a969a
