--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd6c2e8
-	base = d0ccd1a
+	base = fe9d460
 	trim = zstd_point_cloud_transport
-	trimbase = 
+	trimbase = d0ccd1a
