--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd6c2e8
-	base = 71828c8
+	base = dff1637
 	trim = draco_point_cloud_transport
-	trimbase = 
+	trimbase = 71828c8
