--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd6c2e8
-	base = b4349c2
+	base = 76ac73e
 	trim = zlib_point_cloud_transport
-	trimbase = 
+	trimbase = b4349c2
