--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd6c2e8
-	base = bbb0ef3
+	base = 761308b
 	trim = point_cloud_transport_plugins
-	trimbase = 
+	trimbase = bbb0ef3
