Imported upstream version '3.0.2' of 'upstream'

--- a/.github/workflows/ros2-ci.yml
+++ b/.github/workflows/ros2-ci.yml
@@ -11,14 +11,14 @@ jobs:
       matrix:
         include:
           - docker-image: "ubuntu:22.04"
-            ros-distro: "humble"
+            ros-distro: "rolling"
     container:
       image: ${{ matrix.docker-image }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build and Test
-        run: .github/workflows/build-and-test.sh https://raw.githubusercontent.com/${{ github.repository }}/${{ github.sha }}/point_cloud_transport.repos
+        run: .github/workflows/build-and-test.sh
         env:
           DOCKER_IMAGE: ${{ matrix.docker-image }}
           ROS_DISTRO: ${{ matrix.ros-distro }}
