--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 997f519
-	base = 74d651c
+	base = 3b38779
 	trim = point_cloud_interfaces
-	trimbase = 
+	trimbase = 74d651c
