--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 997f519
-	base = be408a1
+	base = 1fef226
 	trim = zstd_point_cloud_transport
-	trimbase = 
+	trimbase = be408a1
