--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 997f519
-	base = 0acaa30
+	base = 6d410cd
 	trim = draco_point_cloud_transport
-	trimbase = 
+	trimbase = 0acaa30
