--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 997f519
-	base = d750217
+	base = 371faf2
 	trim = zlib_point_cloud_transport
-	trimbase = 
+	trimbase = d750217
