--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 997f519
-	base = 5d977ea
+	base = f2ba3c3
 	trim = point_cloud_transport_plugins
-	trimbase = 
+	trimbase = 5d977ea
