--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.0.2": ["Alejandro Hernandez Cordero", "alejandro@openrobotics.org"], "2.0.1": ["Alejandro Hernandez Cordero", "alejandro@openrobotics.org"], "2.0.0": ["Alejandro Hernandez Cordero", "alejandro@openrobotics.org"]}
+{"2.0.3": ["Alejandro Hernandez Cordero", "alejandro@openrobotics.org"], "2.0.2": ["Alejandro Hernandez Cordero", "alejandro@openrobotics.org"], "2.0.1": ["Alejandro Hernandez Cordero", "alejandro@openrobotics.org"], "2.0.0": ["Alejandro Hernandez Cordero", "alejandro@openrobotics.org"]}
