--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 16e0fd1
-	base = b3dc9e5
+	base = b9fe4a6
 	trim = point_cloud_interfaces
-	trimbase = 
+	trimbase = b3dc9e5
