--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 16e0fd1
-	base = e24342f
+	base = 341858c
 	trim = zstd_point_cloud_transport
-	trimbase = 
+	trimbase = e24342f
