--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 16e0fd1
-	base = b66a3cf
+	base = 67e2748
 	trim = draco_point_cloud_transport
-	trimbase = 
+	trimbase = b66a3cf
