--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 16e0fd1
-	base = 7a78ac2
+	base = fb10258
 	trim = zlib_point_cloud_transport
-	trimbase = 
+	trimbase = 7a78ac2
