--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 16e0fd1
-	base = 76ea1e6
+	base = b6d4b71
 	trim = point_cloud_transport_plugins
-	trimbase = 
+	trimbase = 76ea1e6
