--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.8": ["Alejandro Hernandez Cordero", "alejandro@openrobotics.org"], "1.0.7": ["Alejandro Hernandez Cordero", "alejandro@openrobotics.org"], "1.0.6": ["Alejandro Hernandez Cordero", "alejandro@openrobotics.org"]}
+{"1.0.9": ["Alejandro Hernandez Cordero", "alejandro@openrobotics.org"], "1.0.8": ["Alejandro Hernandez Cordero", "alejandro@openrobotics.org"], "1.0.7": ["Alejandro Hernandez Cordero", "alejandro@openrobotics.org"], "1.0.6": ["Alejandro Hernandez Cordero", "alejandro@openrobotics.org"]}
