--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.8": ["Martin Pecka", "peckama2@fel.cvut.cz"], "1.0.7": ["Martin Pecka", "peckama2@fel.cvut.cz"], "1.0.6": ["Martin Pecka", "peckama2@fel.cvut.cz"]}
+{"1.0.9": ["Martin Pecka", "peckama2@fel.cvut.cz"], "1.0.8": ["Martin Pecka", "peckama2@fel.cvut.cz"], "1.0.7": ["Martin Pecka", "peckama2@fel.cvut.cz"], "1.0.6": ["Martin Pecka", "peckama2@fel.cvut.cz"]}
