--- a/draco_point_cloud_transport/package.xml
+++ b/draco_point_cloud_transport/package.xml
@@ -1,6 +1,6 @@
 <package format="3">
   <name>draco_point_cloud_transport</name>
-  <version>2.0.3</version>
+  <version>2.0.4</version>
   <description>
     draco_point_cloud_transport provides a plugin to point_cloud_transport for sending point clouds
     encoded with KD tree compression.
@@ -24,6 +24,7 @@
   <depend>point_cloud_interfaces</depend>
   <depend>point_cloud_transport</depend>
   <depend>rclcpp</depend>
+  <depend>rcpputils</depend>
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
 
