--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 98af535
-	base = 94d33f9
+	base = a6d1a77
 	trim = point_cloud_interfaces
-	trimbase = 
+	trimbase = 94d33f9
