--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 98af535
-	base = 52ae5e7
+	base = 93e3f42
 	trim = zstd_point_cloud_transport
-	trimbase = 
+	trimbase = 52ae5e7
