--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 98af535
-	base = 092433e
+	base = 4da71b5
 	trim = draco_point_cloud_transport
-	trimbase = 
+	trimbase = 092433e
