--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 98af535
-	base = f95d35d
+	base = e30ccc5
 	trim = zlib_point_cloud_transport
-	trimbase = 
+	trimbase = f95d35d
