--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 98af535
-	base = 40de98f
+	base = 55bb5d2
 	trim = point_cloud_transport_plugins
-	trimbase = 
+	trimbase = 40de98f
