--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 69ebb02
-	base = f789dde
+	base = a89d829
 	trim = point_cloud_interfaces
-	trimbase = 
+	trimbase = f789dde
