--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 69ebb02
-	base = bb2f435
+	base = da305bf
 	trim = zstd_point_cloud_transport
-	trimbase = 
+	trimbase = bb2f435
