--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 69ebb02
-	base = 84feff0
+	base = 6fa64f6
 	trim = draco_point_cloud_transport
-	trimbase = 
+	trimbase = 84feff0
