--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 69ebb02
-	base = 8e8c5a7
+	base = 354caf6
 	trim = zlib_point_cloud_transport
-	trimbase = 
+	trimbase = 8e8c5a7
