--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 69ebb02
-	base = fc04c39
+	base = ce31759
 	trim = point_cloud_transport_plugins
-	trimbase = 
+	trimbase = fc04c39
