--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = feb71c2
-	base = 92deb80
-	trim = 
-	trimbase = 
+	base = 2fc8fd7
+	trim = point_cloud_interfaces
+	trimbase = 92deb80
