--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = feb71c2
-	base = 1a473e5
-	trim = 
-	trimbase = 
+	base = 04f053a
+	trim = draco_point_cloud_transport
+	trimbase = 1a473e5
