--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = feb71c2
-	base = 5e910b6
-	trim = 
-	trimbase = 
+	base = 7e7a998
+	trim = zstd_point_cloud_transport
+	trimbase = 5e910b6
