--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = feb71c2
-	base = 092a107
-	trim = 
-	trimbase = 
+	base = ef58a4f
+	trim = point_cloud_transport_plugins
+	trimbase = 092a107
