--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = feb71c2
-	base = 3772235
-	trim = 
-	trimbase = 
+	base = dcd7e04
+	trim = zlib_point_cloud_transport
+	trimbase = 3772235
