--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/draco_point_cloud_transport
-	previous = 
-	base = 04f053a
+	previous = 04f053a
+	base = 00fecba
 	trim = 
 	trimbase = 
