--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/draco_point_cloud_transport
-	previous = 
-	base = 333af36
+	previous = 333af36
+	base = fa1b424
 	trim = 
 	trimbase = 
