--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/point_cloud_interfaces
-	previous = 
-	base = 2fc8fd7
+	previous = 2fc8fd7
+	base = e3920ce
 	trim = 
 	trimbase = 
