--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/point_cloud_interfaces
-	previous = 
-	base = a760ad0
+	previous = a760ad0
+	base = e8dfec3
 	trim = 
 	trimbase = 
