--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/zstd_point_cloud_transport
-	previous = 
-	base = 5f5d7a0
+	previous = 5f5d7a0
+	base = ed5ad64
 	trim = 
 	trimbase = 
