--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/zlib_point_cloud_transport
-	previous = 
-	base = dcd7e04
+	previous = dcd7e04
+	base = b1d1e54
 	trim = 
 	trimbase = 
