--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/zlib_point_cloud_transport
-	previous = 
-	base = 78d5f60
+	previous = 78d5f60
+	base = 3251d6b
 	trim = 
 	trimbase = 
