--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/point_cloud_transport_plugins
-	previous = 
-	base = 220885d
+	previous = 220885d
+	base = ecb9de8
 	trim = 
 	trimbase = 
