--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/zlib_point_cloud_transport
-	previous = 
-	base = 1b4d937
+	previous = 1b4d937
+	base = e053aa2
 	trim = 
 	trimbase = 
