--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/point_cloud_transport_plugins
-	previous = 
-	base = ec64fa6
+	previous = ec64fa6
+	base = 13b3cec
 	trim = 
 	trimbase = 
