--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/zstd_point_cloud_transport
-	previous = 
-	base = 86955e6
+	previous = 86955e6
+	base = 44707e1
 	trim = 
 	trimbase = 
