--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/point_cloud_interfaces
-	previous = 
-	base = aec6eee
+	previous = aec6eee
+	base = f8e5493
 	trim = 
 	trimbase = 
