--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/draco_point_cloud_transport
-	previous = 
-	base = 4952fe8
+	previous = 4952fe8
+	base = bf537bc
 	trim = 
 	trimbase = 
