--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/zstd_point_cloud_transport
-	previous = 
-	base = 7e7a998
+	previous = 7e7a998
+	base = c8eccd2
 	trim = 
 	trimbase = 
