--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/zstd_point_cloud_transport
-	previous = 
-	base = ad9fd09
+	previous = ad9fd09
+	base = 4c569e8
 	trim = 
 	trimbase = 
