--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/zlib_point_cloud_transport
-	previous = 
-	base = 200566b
+	previous = 200566b
+	base = e40693f
 	trim = 
 	trimbase = 
