--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/point_cloud_transport_plugins
-	previous = 
-	base = ef58a4f
+	previous = ef58a4f
+	base = 8a9b308
 	trim = 
 	trimbase = 
