--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/point_cloud_transport_plugins
-	previous = 
-	base = d4d9671
+	previous = d4d9671
+	base = 3d86ac2
 	trim = 
 	trimbase = 
