--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/draco_point_cloud_transport
-	previous = 
-	base = d85c865
+	previous = d85c865
+	base = 07932be
 	trim = 
 	trimbase = 
