--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/point_cloud_interfaces
-	previous = 
-	base = e55b766
+	previous = e55b766
+	base = ad11580
 	trim = 
 	trimbase = 
