--- a/tracks.yaml
+++ b/tracks.yaml
@@ -76,5 +76,4 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/ros-perception/point_cloud_transport_plugins
-    version: 3.0.3
-    version_saved: :{auto}
+    version: :{auto}
