--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 92318d1
-	base = 4b518f8
+	base = 12ac086
 	trim = point_cloud_interfaces
-	trimbase = 
+	trimbase = 4b518f8
