--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 92318d1
-	base = 0ba5d34
+	base = 18b5f72
 	trim = draco_point_cloud_transport
-	trimbase = 
+	trimbase = 0ba5d34
