--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 92318d1
-	base = 1248f69
+	base = 156cf41
 	trim = zstd_point_cloud_transport
-	trimbase = 
+	trimbase = 1248f69
