--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 92318d1
-	base = 28d8f05
+	base = a149e47
 	trim = point_cloud_transport_plugins
-	trimbase = 
+	trimbase = 28d8f05
