--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 92318d1
-	base = 4804b22
+	base = f284aa9
 	trim = zlib_point_cloud_transport
-	trimbase = 
+	trimbase = 4804b22
