--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cd79090
-	base = 4e08e40
+	base = 5e6b5df
 	trim = point_cloud_interfaces
-	trimbase = 
+	trimbase = 4e08e40
