--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cd79090
-	base = a5cb62e
+	base = 5d26a50
 	trim = zstd_point_cloud_transport
-	trimbase = 
+	trimbase = a5cb62e
