--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cd79090
-	base = bd75038
+	base = 2bb4e3d
 	trim = draco_point_cloud_transport
-	trimbase = 
+	trimbase = bd75038
