--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cd79090
-	base = a486f02
+	base = 6da318e
 	trim = zlib_point_cloud_transport
-	trimbase = 
+	trimbase = a486f02
