--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cd79090
-	base = e6148f6
+	base = 7fa1f6b
 	trim = point_cloud_transport_plugins
-	trimbase = 
+	trimbase = e6148f6
