--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 281d391
-	base = 1d4c561
+	base = 4168369
 	trim = point_cloud_interfaces
-	trimbase = 
+	trimbase = 1d4c561
