--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 281d391
-	base = 018195a
+	base = cbd71be
 	trim = zstd_point_cloud_transport
-	trimbase = 
+	trimbase = 018195a
