--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 281d391
-	base = 971c2db
+	base = 7644e7f
 	trim = draco_point_cloud_transport
-	trimbase = 
+	trimbase = 971c2db
