--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 281d391
-	base = 7b4f1b1
+	base = b446c45
 	trim = zlib_point_cloud_transport
-	trimbase = 
+	trimbase = 7b4f1b1
