--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 281d391
-	base = 14b1713
+	base = a029607
 	trim = point_cloud_transport_plugins
-	trimbase = 
+	trimbase = 14b1713
