--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 281d391
-	base = 9648fdf
+	base = 1df75b4
 	trim = point_cloud_interfaces
-	trimbase = 
+	trimbase = 9648fdf
