--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 281d391
-	base = 8f7766a
+	base = 0403229
 	trim = zstd_point_cloud_transport
-	trimbase = 
+	trimbase = 8f7766a
