--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 281d391
-	base = 842afec
+	base = 7a5d6ad
 	trim = draco_point_cloud_transport
-	trimbase = 
+	trimbase = 842afec
