--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 281d391
-	base = efa4dcd
+	base = 663fbc6
 	trim = zlib_point_cloud_transport
-	trimbase = 
+	trimbase = efa4dcd
