--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 281d391
-	base = 42e562b
+	base = d6b33dd
 	trim = point_cloud_transport_plugins
-	trimbase = 
+	trimbase = 42e562b
