--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"3.0.3-4": ["Fri May 24 2024", "Martin Pecka", "peckama2@fel.cvut.cz"], "3.0.3-3": ["Fri Apr 19 2024", "Martin Pecka", "peckama2@fel.cvut.cz"], "3.0.3-2": ["Wed Mar 06 2024", "Martin Pecka", "peckama2@fel.cvut.cz"]}
+{"3.0.3-5": ["Fri May 24 2024", "Martin Pecka", "peckama2@fel.cvut.cz"], "3.0.3-4": ["Fri May 24 2024", "Martin Pecka", "peckama2@fel.cvut.cz"], "3.0.3-3": ["Fri Apr 19 2024", "Martin Pecka", "peckama2@fel.cvut.cz"], "3.0.3-2": ["Wed Mar 06 2024", "Martin Pecka", "peckama2@fel.cvut.cz"]}
