--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 54d7f97
-	base = eca8bb1
+	base = b2531ec
 	trim = point_cloud_interfaces
-	trimbase = 
+	trimbase = eca8bb1
