--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 54d7f97
-	base = 0f09d2e
+	base = c15ceec
 	trim = zstd_point_cloud_transport
-	trimbase = 
+	trimbase = 0f09d2e
