--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 54d7f97
-	base = 62bba7d
+	base = 70cf5bd
 	trim = draco_point_cloud_transport
-	trimbase = 
+	trimbase = 62bba7d
