--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 54d7f97
-	base = 6a23dd5
+	base = 2441ec9
 	trim = zlib_point_cloud_transport
-	trimbase = 
+	trimbase = 6a23dd5
