--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 54d7f97
-	base = 12ebb3e
+	base = 797f716
 	trim = point_cloud_transport_plugins
-	trimbase = 
+	trimbase = 12ebb3e
