--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9b7b163
-	base = 0831942
+	base = f3a958f
 	trim = point_cloud_interfaces
-	trimbase = 
+	trimbase = 0831942
