--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9b7b163
-	base = 58350c9
+	base = 04d7084
 	trim = zstd_point_cloud_transport
-	trimbase = 
+	trimbase = 58350c9
