--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9b7b163
-	base = a310a4e
+	base = b1ef436
 	trim = draco_point_cloud_transport
-	trimbase = 
+	trimbase = a310a4e
