--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9b7b163
-	base = 6ea2453
+	base = 943d6ee
 	trim = zlib_point_cloud_transport
-	trimbase = 
+	trimbase = 6ea2453
