--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9b7b163
-	base = 19c72bb
+	base = 77426da
 	trim = point_cloud_transport_plugins
-	trimbase = 
+	trimbase = 19c72bb
