--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"3.0.3-2": ["Wed Mar 06 2024", "Alejandro Hernandez Cordero", "alejandro@openrobotics.org"]}
+{"5.0.0-1": ["Fri May 24 2024", "Alejandro Hernandez Cordero", "alejandro@openrobotics.org"], "3.0.3-2": ["Wed Mar 06 2024", "Alejandro Hernandez Cordero", "alejandro@openrobotics.org"]}
