--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = aead5e7
-	base = 26ab8ec
+	base = 1558f28
 	trim = point_cloud_interfaces
-	trimbase = 
+	trimbase = 26ab8ec
