--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = aead5e7
-	base = 6127cf0
+	base = b434055
 	trim = zstd_point_cloud_transport
-	trimbase = 
+	trimbase = 6127cf0
