--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = aead5e7
-	base = e6bd277
+	base = 7dd0851
 	trim = draco_point_cloud_transport
-	trimbase = 
+	trimbase = e6bd277
