--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = aead5e7
-	base = e6906d5
+	base = 3df9fc8
 	trim = zlib_point_cloud_transport
-	trimbase = 
+	trimbase = e6906d5
