--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = aead5e7
-	base = c10a28f
+	base = 91e2701
 	trim = point_cloud_transport_plugins
-	trimbase = 
+	trimbase = c10a28f
