Imported upstream version '5.0.1' of 'upstream'

--- a/.github/workflows/ros2-ci.yml
+++ b/.github/workflows/ros2-ci.yml
@@ -10,13 +10,13 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - docker-image: "ubuntu:22.04"
-            ros-distro: "humble"
+          - docker-image: "ubuntu:24.04"
+            ros-distro: "rolling"
     container:
       image: ${{ matrix.docker-image }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Build and Test
         run: .github/workflows/build-and-test.sh
         env:
