--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7ccf45f
-	base = 5020b25
+	base = 94dc2b6
 	trim = point_cloud_interfaces
-	trimbase = 
+	trimbase = 5020b25
