--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7ccf45f
-	base = 3a2e30a
+	base = 1f317c6
 	trim = zstd_point_cloud_transport
-	trimbase = 
+	trimbase = 3a2e30a
