--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7ccf45f
-	base = 7e5488b
+	base = a12dad4
 	trim = draco_point_cloud_transport
-	trimbase = 
+	trimbase = 7e5488b
