--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7ccf45f
-	base = ec64e04
+	base = a4b413e
 	trim = zlib_point_cloud_transport
-	trimbase = 
+	trimbase = ec64e04
