--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7ccf45f
-	base = 32054ba
+	base = f1bf6db
 	trim = point_cloud_transport_plugins
-	trimbase = 
+	trimbase = 32054ba
