--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"5.0.0-1": ["Fri May 24 2024", "Martin Pecka", "peckama2@fel.cvut.cz"], "3.0.3-2": ["Wed Mar 06 2024", "Martin Pecka", "peckama2@fel.cvut.cz"]}
+{"5.0.1-1": ["Tue Sep 03 2024", "Martin Pecka", "peckama2@fel.cvut.cz"], "5.0.0-1": ["Fri May 24 2024", "Martin Pecka", "peckama2@fel.cvut.cz"], "3.0.3-2": ["Wed Mar 06 2024", "Martin Pecka", "peckama2@fel.cvut.cz"]}
