Imported upstream version '4.0.1' of 'upstream'

--- a/plugin_template/CMakeLists.txt
+++ b/plugin_template/CMakeLists.txt
@@ -1,4 +1,4 @@
-# TODO (YourNameHere): This is not a working CMake Project!
+# TODO (YourNameHere): This is not a working CMake Project! 
 # Some assembly required for your plugin. (-:
 
 cmake_minimum_required(VERSION 3.10.2)
@@ -15,15 +15,13 @@ find_package(rclcpp REQUIRED)
 # TODO (YourNameHere): You might need more dependencies
 
 set(dependencies
-  pluginlib::pluginlib
-  ${point_cloud_interfaces_TARGETS}
-  point_cloud_transport::point_cloud_transport
-  rclcpp::rclcpp
+  pluginlib
+  point_cloud_interfaces
+  point_cloud_transport
+  rclcpp
 )
 
-target_include_directories(${PROJECT_NAME} PRIVATE
-  "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
-  "$<INSTALL_INTERFACE:include/${PROJECT_NAME}>")
+include_directories(include)
 
 add_library(${PROJECT_NAME}
   SHARED
@@ -33,9 +31,7 @@ add_library(${PROJECT_NAME}
   src/template_subscriber.cpp
 )
 
-target_link_libraries(${PROJECT_NAME} PRIVATE
-  ${dependencies}
-)
+ament_target_dependencies(${PROJECT_NAME} ${dependencies})
 
 install(TARGETS ${PROJECT_NAME}
   ARCHIVE DESTINATION lib
