--- a/zstd_point_cloud_transport/CMakeLists.txt
+++ b/zstd_point_cloud_transport/CMakeLists.txt
@@ -11,11 +11,13 @@ find_package(point_cloud_transport REQUIRED)
 find_package(rclcpp REQUIRED)
 
 set(dependencies
-  pluginlib::pluginlib
-  ${point_cloud_interfaces_TARGETS}
-  point_cloud_transport::point_cloud_transport
-  rclcpp::rclcpp
+  pluginlib
+  point_cloud_interfaces
+  point_cloud_transport
+  rclcpp
 )
+
+include_directories(include)
 
 add_library(${PROJECT_NAME}
   SHARED
@@ -24,14 +26,9 @@ add_library(${PROJECT_NAME}
   src/manifest.cpp
 )
 
-target_link_libraries(${PROJECT_NAME} PRIVATE
-  zstd
-  ${dependencies}
-)
+target_link_libraries(${PROJECT_NAME} zstd)
 
-target_include_directories(${PROJECT_NAME} PRIVATE
-  "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
-  "$<INSTALL_INTERFACE:include/${PROJECT_NAME}>")
+ament_target_dependencies(${PROJECT_NAME} ${dependencies})
 
 install(TARGETS ${PROJECT_NAME}
   ARCHIVE DESTINATION lib
