--- a/zlib_point_cloud_transport/CMakeLists.txt
+++ b/zlib_point_cloud_transport/CMakeLists.txt
@@ -12,11 +12,14 @@ find_package(rclcpp REQUIRED)
 find_package(ZLIB REQUIRED)
 
 set(dependencies
-  pluginlib::pluginlib
-  ${point_cloud_interfaces_TARGETS}
-  point_cloud_transport::point_cloud_transport
-  rclcpp::rclcpp
+  pluginlib
+  point_cloud_interfaces
+  point_cloud_transport
+  rclcpp
 )
+
+
+include_directories(include)
 
 add_library(${PROJECT_NAME}
   SHARED
@@ -26,14 +29,9 @@ add_library(${PROJECT_NAME}
   src/manifest.cpp
 )
 
-target_link_libraries(${PROJECT_NAME} PRIVATE
-  ZLIB::ZLIB
-  ${dependencies}
-)
-target_include_directories(${PROJECT_NAME} PRIVATE
-  "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
-  "$<INSTALL_INTERFACE:include/${PROJECT_NAME}>"
-)
+target_link_libraries(${PROJECT_NAME} ZLIB::ZLIB)
+
+ament_target_dependencies(${PROJECT_NAME} ${dependencies})
 
 install(TARGETS ${PROJECT_NAME}
   ARCHIVE DESTINATION lib
