--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b4e9dc9
-	base = be373f5
+	base = 2e11c14
 	trim = point_cloud_interfaces
-	trimbase = 
+	trimbase = be373f5
