--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b4e9dc9
-	base = 7e6156e
+	base = 0d35ca2
 	trim = zstd_point_cloud_transport
-	trimbase = 
+	trimbase = 7e6156e
