--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b4e9dc9
-	base = 4f187fc
+	base = a82bc79
 	trim = draco_point_cloud_transport
-	trimbase = 
+	trimbase = 4f187fc
