--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b4e9dc9
-	base = 57ee61a
+	base = 7ee85cd
 	trim = zlib_point_cloud_transport
-	trimbase = 
+	trimbase = 57ee61a
