--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b4e9dc9
-	base = 023a1ef
+	base = c18782c
 	trim = point_cloud_transport_plugins
-	trimbase = 
+	trimbase = 023a1ef
