--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b8d849a07144
-	base = 1ec0c7019af4
+	base = 2104bf52b9d3
 	trim = zstd_point_cloud_transport
-	trimbase = 
+	trimbase = 1ec0c7019af4
