--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b8d849a07144
-	base = 94024f5b874d
+	base = 0ba291e7b244
 	trim = zlib_point_cloud_transport
-	trimbase = 
+	trimbase = 94024f5b874d
