--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b8d849a07144
-	base = bd00bec2fd1e
+	base = adae32af2ff1
 	trim = point_cloud_transport_plugins
-	trimbase = 
+	trimbase = bd00bec2fd1e
