--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b8d849a07144
-	base = 8ba6f8254f7a
+	base = fe870e5a68db
 	trim = point_cloud_interfaces
-	trimbase = 
+	trimbase = 8ba6f8254f7a
