--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b8d849a07144
-	base = 978f91e4e53e
+	base = d97740c29114
 	trim = draco_point_cloud_transport
-	trimbase = 
+	trimbase = 978f91e4e53e
