--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ccda220
-	base = 47c663b
+	base = ca682dc
 	trim = zstd_point_cloud_transport
-	trimbase = 
+	trimbase = 47c663b
