--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ccda220
-	base = f9d6026
+	base = 937d426
 	trim = zlib_point_cloud_transport
-	trimbase = 
+	trimbase = f9d6026
