--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ccda220
-	base = 4f120e8
+	base = 5fedd54
 	trim = draco_point_cloud_transport
-	trimbase = 
+	trimbase = 4f120e8
