--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ccda220
-	base = dfb0a2b
+	base = 846bd34
 	trim = point_cloud_interfaces
-	trimbase = 
+	trimbase = dfb0a2b
