--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ccda220
-	base = 67a499f
+	base = 46a46c2
 	trim = point_cloud_transport_plugins
-	trimbase = 
+	trimbase = 67a499f
