--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ccda220
-	base = f512ce0
+	base = d95b718
 	trim = zstd_point_cloud_transport
-	trimbase = 
+	trimbase = f512ce0
