--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ccda220
-	base = 0511ffc
+	base = 4f3233e
 	trim = zlib_point_cloud_transport
-	trimbase = 
+	trimbase = 0511ffc
