--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ccda220
-	base = 5884cb5
+	base = 5dcc0a6
 	trim = draco_point_cloud_transport
-	trimbase = 
+	trimbase = 5884cb5
