--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ccda220
-	base = 39869d6
+	base = bd4c585
 	trim = point_cloud_interfaces
-	trimbase = 
+	trimbase = 39869d6
