--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ccda220
-	base = 10897e7
+	base = 33bc474
 	trim = point_cloud_transport_plugins
-	trimbase = 
+	trimbase = 10897e7
