--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a884f66
-	base = eb1b4b0
+	base = 9492bf6
 	trim = zstd_point_cloud_transport
-	trimbase = 
+	trimbase = eb1b4b0
