Rebase from 'upstream'

--- a/draco_point_cloud_transport/CMakeLists.txt
+++ b/draco_point_cloud_transport/CMakeLists.txt
@@ -16,17 +16,17 @@ find_package(std_msgs REQUIRED)
 find_package(Draco REQUIRED)
 
 set(dependencies
-  pluginlib
-  point_cloud_interfaces
-  point_cloud_transport
-  rclcpp
-  rcpputils
-  sensor_msgs
-  std_msgs
+  pluginlib::pluginlib
+  ${point_cloud_interfaces_TARGETS}
+  point_cloud_transport::point_cloud_transport
+  rclcpp::rclcpp
+  rcpputils::rcpputils
+  ${sensor_msgs_TARGETS}
+  ${std_msgs_TARGETS}
 )
 
 
-include_directories(include ${DRACO_INCLUDE_DIR})
+include_directories(include)
 
 add_library(${PROJECT_NAME}
   SHARED
@@ -36,9 +36,32 @@ add_library(${PROJECT_NAME}
   src/manifest.cpp
 )
 
-target_link_libraries(${PROJECT_NAME} ${DRACO_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} PRIVATE
+  ${dependencies}
+)
 
-ament_target_dependencies(${PROJECT_NAME} ${dependencies})
+# draco 1.5.3 dropped the DRACO_LIBRARIES variable in favor of
+# draco::draco imported target, but debian introduced DRACO_LIBRARIES
+# back, but that is not present in other distributions. For maximum
+# compatibility, we link DRACO_LIBRARIES if defined, otherwise draco::draco
+# See:
+# * https://github.com/google/draco/commit/7109fbee87c6d932cdc0ac7394bc5d485db26d44
+# * https://sources.debian.org/patches/draco/1.5.6+dfsg-3/0004-Set-DRACO_LIBRARIES-for-backwards-compatibility.patch/
+if(DEFINED DRACO_LIBRARIES)
+  target_link_libraries(${PROJECT_NAME} PRIVATE
+    ${DRACO_LIBRARIES}
+  )
+else()
+  target_link_libraries(${PROJECT_NAME} PRIVATE
+    draco::draco
+  )
+endif()
+
+target_include_directories(${PROJECT_NAME} PRIVATE
+  "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+  "$<INSTALL_INTERFACE:include/${PROJECT_NAME}>"
+  ${DRACO_INCLUDE_DIR}
+)
 
 install(TARGETS ${PROJECT_NAME}
   ARCHIVE DESTINATION lib
