--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a884f66
-	base = 3e129ab
+	base = 365ffea
 	trim = zlib_point_cloud_transport
-	trimbase = 
+	trimbase = 3e129ab
