--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a884f66
-	base = b5314ad
+	base = 311d328
 	trim = draco_point_cloud_transport
-	trimbase = 
+	trimbase = b5314ad
