--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a884f66
-	base = c002a15
+	base = 71c09ae
 	trim = point_cloud_interfaces
-	trimbase = 
+	trimbase = c002a15
