--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a884f66
-	base = 3465169
+	base = fffd67a
 	trim = point_cloud_transport_plugins
-	trimbase = 
+	trimbase = 3465169
